...
            app:title="@string/confirmText"
            app:titleCentered="true"
            app:titleTextColor="@color/colorOnSecondary" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/confirm_properties_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:text="\n\n\n\n\n"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circularProgressBar"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/confirm_check_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="check"
        android:text="بررسی"
        android:textSize="20sp"
...
