...
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="TextView"
        android:textColor="@color/Brown"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/extraViewSub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pictureWebView"
        app:layout_constraintTop_toBottomOf="@+id/scannedViewSub" />

    <TextView
        android:id="@+id/extraViewSub"
...
