package com.jeanwest.reader.confirm

import org.junit.Assert.*
import androidx.test.core.app.ActivityScenario
import androidx.test.espresso.Espresso.*
import androidx.test.espresso.action.ViewActions.click
import androidx.test.espresso.action.ViewActions.typeText
import androidx.test.espresso.action.ViewActions.pressImeActionButton
import androidx.test.espresso.action.ViewActions.pressKey
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.matcher.ViewMatchers.withId
import androidx.test.espresso.matcher.ViewMatchers.withText
import com.jeanwest.reader.MainActivity
import com.jeanwest.reader.R
import com.jeanwest.reader.testClasses.RFIDWithUHFUART
import com.rscja.deviceapi.entity.UHFTAGInfo
import org.junit.Test
import org.hamcrest.CoreMatchers.*

class ConfirmScanningActivityTest {

    //Scan one section of store and check if scan and its parameters are true (such as scan rate, beep, percentage circle, etc.)
    //Send scanned products to server and compare number of scanned in both activities
    @Test
    fun firstTest() {
        ActivityScenario.launch(MainActivity::class.java)
        //onView(withId(R.id.startConfirmActivityButton)).perform(click())
        onView(withId(R.id.confirm_id_text)).perform(typeText("114000014948"))
        onView(withId(R.id.confirm_id_text)).perform(pressImeActionButton())

        RFIDWithUHFUART.uhfTagInfo.clear()

        for (i in 1 until 11) {

            val uhfTagInfo = UHFTAGInfo()
            uhfTagInfo.epc = epcs[i]
            RFIDWithUHFUART.uhfTagInfo.add(uhfTagInfo)
            //Log.e("epcs", RFIDWithUHFUART.uhfTagInfo[i].epc)
        }

        Thread.sleep(10000)

        onView(withId(R.id.confirm_properties_text)).check(matches(withText(containsString("114000014948"))))
        onView(withId(R.id.confirm_properties_text)).check(matches(withText(containsString("5"))))

        onView(withId(R.id.confirm_properties_text)).perform(pressKey(280))
        Thread.sleep(2000)
        onView(withId(R.id.confirm_properties_text)).perform(pressKey(280))
        Thread.sleep(2000)

        onView(withId(R.id.confirm_properties_text)).check(matches(withText(containsString("10/5"))))

        onView(withId(R.id.confirm_check_button)).perform(click())

        Thread.sleep(20000)

        /*onData(anything()).inAdapterView(withId(R.id.confirm_result_view)).atPosition(0)
            .onChildView(withId(R.id.extraViewSub))
            .check(matches(withText(containsString("0"))))*/
    }

    private val epcs = arrayOf("30C0194000E889800001C2DB",

        "30C0194000C764800001AE8F",
        "30C0194000C764800001AE8E",
        "30C0194000C764800001AE86",
        "30C0194000C764800001AE88",
        "30C0194000C764800001AE84",
        "30C0194000C764800001AE85",

        "30C01901C973170000007253",
        "30C01901C96FC28000007A54",
        "30C0194000D9AA000001C1FC",
        "30C01901C96FC28000007A51",
        "30C01901C90CE00000007805",
        "30C0194000DC20C000017A0B",
        "30C0194000D6DD000001A174",
        "30C019002DC594800000640C",
        "30C41901C98F6E00000082DA",
        "30C0194000E5680000012D9B",
        "30C01901C90F4F8000007637",
        "30C0194000EB254000019AF5",
        "30C41901C98F6E00000082F6",
        "30C41901C98F6E00000082FA",
        "30C0194000D9AA000001C1EB",
        "30C0194000D9AA000001C1EA",
        "30C0194000E8E7C00001778D",
        "30C019002DC5948000006410",
        "30C0194000DC20C000017A1C",
        "30C019002DC6640000007AD9",
        "30C019002DC6640000007AD7",
        "30C019002DC6640000007AD8",
        "30C019002DC6640000007AD5",
        "30C019002DC6640000007AD6",
        "30C0190003AC36C0000070DD",
        "30C0194000ED72400001C358",
        "30C0194000C0A5C00001297D",
        "30C01901C9933F0000003E2A",
        "30C0194000C7690000012DD2",
        "30C01901C973BB80000078FA",
        "30C41901C98F6E00000082FC",
        "30C01901C96EF700000074A0",
        "30C0194000C7690000012DD5",
        "30C0194000E33CC00001B0ED",
        "30C0194000C7690000017C26",
        "30C0194000C7690000017C25",
        "30C0194000C96FC00001A179",
        "30C0194000E25F400001761A",
        "30C0194000C7690000012DCC",
        "30C0194000E95E4000017D96",
        "30C0190100E285C0000174D3",
        "30C0194000EB8DC000019A6E",
        "30C01901C9933F0000003E42",
        "30C0194000EB8DC000019A6C",
        "30C01901C90DFC80000072C5",
        "30C0194000D9B3C00001C1FB",
        "30C0194000DC22400001A280",
        "30C0194000E288000001755C",
        "30C01901C96F4A00000079AF",
        "30C41901C98F6E00000082A7",
        "30C0194000DC22400001A281",
        "30C0194000DC22400001A27F",
        "30C0194000E2880000017562",
        "30C01901C96F4A00000079B0",
        "30C0194000E417400001AEC0",
        "30C0194000DC22400001A299",
        "30C019002DB71BC000007022",
        "30C0194000DC22400001A298",
        "30C019002DB71BC000007024",
        "30C0190003B8F5C0000073C0",
        "30C0194000E417400001AEC6",
        "30C0190003B8F5C0000073C4",
        "30C0194000E75D400001AE18",
        "30C41901C98F6E00000082B8",
        "30C0194000DC22400001A293",
        "30C019002DB71BC00000701A",
        "30C0194000C7D44000017CF6",
        "30C019002DB71BC00000701B",
        "30C019002DB71BC00000701C",
        "30C0194000C6F84000014DC9",
        "30C0194000ECA08000019E78",
        "30C0194000DC22400001A28A",
        "30C019002DB71BC000007021",
        "30C019002DC664800000779E",
        "30C01901C970C70000009EA2",
        "30C01901C970C70000009EA1",
        "30C01901C970C70000009EA0",
        "30C0194000733C0000019CE5",
        "30C01901C992D48000006B1E",
        "30C019002DC41A800000776B",
        "30C41901C97202400000823A",
        "30C0194000EB254000019AEC",
        "30C0194000EB724000019C6D",
        "30C01901C96F6340000001CF",
        "30C019002DC41A8000007769",
        "30C0194000733C0000019CDE",
        "30C0194000DC22400001A29E",
        "30C0194000DC22400001A29D",
        "30C0194000E280C00001C2AE",
        "30C0194000E889800001C2EC",
        "30C0194000E2F4800001B125",
        "30C01901C96F6340000001D2",
        "30C41901C98F6E00000082D8",
        "30C01901C970C70000009EAD",
        "30C0194000EB254000019ADE",
        "30C01901C970C70000009EAA",
        "30C019002DC40B8000006EB0",
        "30C0194000EDBF40000179BF",
        "30C0194000733C0000019CED",
        "30C0194000DC22400001A2DB",
        "30C0194000DC8400000176FD",
        "30C0194000E456800001A1E8",
        "30C0194000CBE9800001777E",
        "30C0194000DC22400001A2DF",
        "30C01901C993B38000006B5D",
        "30C01901C993B38000006B5F",
        "30C0194000E367C000017420",
        "30C01901C97096C000009F39",
        "30C01901C97096C000009F38",
        "30C01901C97096C000009F33",
        "30C01901C995464000006E58",
        "30C0194000EC9FC000019E75",
        "30C01901C995464000006E59",
        "30C0194000E520800001B1D9",
        "30C41901C96F498000001B5D",
        "30C019002DC4218000007756",
        "30C0194000EB254000019B11",
        "30C019002DC5EB8000006C51",
        "30C019002DC4218000007754",
        "30C0194000EB254000019B12",
        "30C01901C995464000006E4B",
        "30C0194000E336C000017BE7",
        "30C0194000E5600000014EE7",
        "30C01901C972EF40000077A4",
        "30C019002DC41A8000007761",
        "30C0194000DC7840000160CF",
        "30C0194000EB6D8000017A47",
        "30C41901C97A87C00000831A",
        "30C0194000DC22400001A2E4",
        "30C4194000E8E90000012BFF",
        "30C01901C973328000003D79",
        "30C0194000EB254000019B05",
        "30C01901C96F634000000208",
        "30C0190003B8FDC0000073E6",
        "30C4194000E8E90000012BFA",
        "30C0190003B8FDC0000073E5",
        "30C0194000C968800001A15A",
        "30C0190003B8FDC0000073E7",
        "30C0194000E418400001B007",
        "30C41901C8B1A840000083F1",
        "30C01940009E81400001B1FA",
        "30C4194000E8E90000012BF5",
        "30C0190003B8F6800000731F",
        "30C0194000E2DBC00001B083",
        "30C01940009E81400001B1F9",
        "30C01940009E81400001B1F8",
        "30C01940009E81400001B1F7",
        "30C01901C97AF3C000003DB1",
        "30C01940009E81400001B1F5",
        "30C41901C8B1A840000083EB",
        "30C41901C8B1A840000083ED",
        "30C0194000E28E00000160BB",
        "30C01901C97096C000009F40",
        "30C01901C96EF7000000749B",
        "30C0194000DC7880000176F4",
        "30C0194000E28E00000160B8",
        "30C0190024AA73C000007321",
        "30C0194000EB254000019B1C",
        "30C0194000E520800001B1DB",
        "30C0194000ED0A800001781C",
        "30C0194000ED0A800001781E",
        "30C01901C96EF70000007496",
        "30C0194000EDB84000017BA0",
        "30C01901C97096C000009F3F",
        "30C0194000E88A4000017B07",
        "30C0194000C05B000001C318",
        "30C01901C973204000007210",
        "30C0194000E5208000017BAE",
        "30C0194000E5208000017BAF",
        "30C01901C9730E8000006E92",
        "30C01901C9730E8000006E93",
        "30C41901C97A88800000831C",
        "30C0190003B8FE80000073EA",
        "30C019002DC520C0000071D2",
        "30C0194000C9720000017356",
        "30C0194000E275400001A33E",
        "30C4194000BE2B8000012B1C",
        "30C0194000E73D40000127F5",
        "30C0194000E740C00001C2B4",
        "30C019002DC6698000007232",
        "30C01901C9938F4000009DD0",
        "30C0194000DC22400001A2AD",
        "30C0194000E2DBC00001B078",
        "30C01940009E814000012DB2",
        "30C0194000D2034000012E43",
        "30C01901C97AF48000003DF0",
        "30C0194000E33CC00001B0BD",
        "30C0194000D9AD800001C215",
        "30C0194000D9AD800001C217",
        "30C0194000E93D000001766F",
        "30C019402DC5680000006908",
        "30C019002DC4144000007536",
        "30C0190000F59380000070E1",
        "30C019002DC668400000023B",
        "30C01901C97116C000006C7A",
        "30C0194000DC22400001A2B9",
        "30C01901C96FC0400000692A",
        "30C01901C992CB8000006A87",
        "30C01901C992CB8000006A85",
        "30C0194000E737000001739F",
        "30C0194000DC22400001A2CC",
        "30C41901C90DAAC0000002C3",
        "30C0194000DC22400001A2CB",
        "30C0194000DC22400001A2CA",
        "30C419002DC152800000B300",
        "30C0194000E33CC00001B0A6",
        "30C0194000D20580000177AA",
        "30C019002DC5BBC000006B6A",
        "30C0194000E2DBC00001B056",
        "30C0194000DC22400001A2C9",
        "30C0194000E2DBC00001B057",
        "30C0194000E455C00001A1E3",
        "30C419002DC4378000001950",
        "30C0194000E455C00001A1E4",
        "30C0194000E455C00001A1E5",
        "30C01901C970C70000009E9F",
        "30C01901C970C70000009E9E",
        "30C01901C992CAC000006A8C",
        "30C0194000E7420000012D47",
        "30C01901C971070000006C87",
        "30C0194000E2DBC00001B0BE",
        "30C01901C9952280000001D5",
        "30C01940008B4CC000017A38",
        "30C01901C9716E4000006A74",
        "30C01901C9716E4000006A73",
        "30C41901C97A8880000082CF",
        "30C01901C992EB8000006AD0",
        "30C01901C97319C0000071F8",
        "30C01901C97319C0000071F5",
        "30C419002DC3A600000005BE",
        "30C419002DC3A600000005BD",
        "30C019400073324000019EBB",
        "30C0194000E95A400001B1BF",
        "30C41901C97A8880000082C1",
        "30C0194000E2DB000001B0A3",
        "30C0194000E2DB000001B0A4",
        "30C0194000D7C48000017E10",
        "30C0194000E2DB000001B0A7",
        "30C0194000E2DBC00001B0C8",
        "30C41901C96F5E40000081C9",
        "30C0194000E2DB000001B0A8",
        "30C41901C96F5E40000081C8",
        "30C41901C96F5E40000081C7",
        "30C41901C96F5E40000081C6",
        "30C01901C973594000006FB9",
        "30C0190003B8F5C000007404",
        "30C01901C973594000006FB8",
        "30C019002DC670C000007721",
        "30C0194000D9B4800001C285",
        "30C0194000E2DBC00001B0C0",
        "30C019002DC670C000007723",
        "30C0194000E885000001AE27",
        "30C019002DC6318000006A50",
        "30C419002DB81FC0000012DC",
        "30C4194000E74200000104DC",
        "30C41901C97A8880000082F2",
        "30C0194000EDD7C00001AE51",
        "30C01901C995060000007BCE",
        "30C01901C995364000009EDF",
        "30C019002DC6318000006A4F",
        "30C019002DC6318000006A4D",
        "30C019002DC6318000006A4E",
        "30C0194000E87EC0000127E3",
        "30C41901C98F6EC000008292",
        "30C01901C995060000007BD7",
        "30C41901C9731C8000000C9A",
        "30C0194000EDD84000017DD1",
        "30C0194000EDD84000017DD4",
        "30C0194000EB3E4000019CB5",
        "30C0194000EDD84000017DD6",
        "30C0194000BE298000014E06",
        "30C0194000E888800001AE1E",
        "30C41901C98F6EC00000829A",
        "30C41901C9734940000003AD",
        "30C0194000E55FC000017A5A",
        "30C41901C98F6EC000008299",
        "30C0194000E885000001AE3D",
        "30C0194000E55FC000017A5B",
        "30C0194000E27D40000175A0",
        "30C0194000E55FC000017A5C",
        "30C41901C9734940000003B5",
        "30C0194000CBD64000012D11",
        "30C41901C971FA000000822C",
        "30C0194000E296400001B00E",
        "30C01901C98FF9800000715E",
        "30C0194000E26A4000017D4E",
        "30C0194000C761800001A0A0",
        "30C0194000C761800001A0A1",
        "30C0194000E296400001B008",
        "30C0194000C71D400001791E",
        "30C01901C98FF98000007169",
        "30C0194000E28600000174BB",
        "30C0194000E73AC0000178A8",
        "30C0194000ECA8C000019A9B",
        "30C0190024B246C0000073CA",
        "30C41901C971FA000000823D",
        "30C0194000E2D6800001B095",
        "30C0194000E2D6800001B097",
        "30C019002DC52000000071D5",
        "30C0194000E2D6800001B098",
        "30C0194000E28600000174BC",
        "30C019002DC66480000077FB",
        "30C0194000E2D6800001B092",
        "30C019002DC66480000077FA",
        "30C019002DC6684000000293",
        "30C0194000E2D6800001B094",
        "30C019002DC66480000077FF",
        "30C0194000C763C00001C15B",
        "30C0194000E28600000174B7",
        "30C0194000E28E40000176C8",
        "30C41901C97A8880000082FB",
        "30C0194000E2DB000001B0CD",
        "30C019002DC66C8000007728",
        "30C0194000D9A2400001B179",
        "30C01901C9953D4000006D6E",
        "30C0194000E93DC000017679",
        "30C41901C96F5E40000081CC",
        "30C41901C96F5E40000081CB",
        "30C41901C97A8C80000081D2",
        "30C41901C96F5E40000081CA",
        "30C019002DC66C800000772E",
        "30C0194000E2D6800001B080",
        "30C0194000E2DB000001B0D7",
        "30C0194000E712C0000102D0",
        "30C0194000E712C0000102D2",
        "30C0194000D9A2400001B187",
        "30C0190003B8F5C000007416",
        "30C0194000E712C0000102CE",
        "30C01901C96FC2C0000079EE",
        "30C01901C96FC2C0000079EC",
        "30C019002DB63280000075E1",
        "30C01901C97A8F8000007142",
        "30C41901C97A8C80000081E7",
        "30C01901C99542C000003FA6",
        "30C0194000D9B4800001C25D",
        "30C41901C97A8C80000081E5",
        "30C01901C97A8F8000007146",
        "30C0194000D9B4800001C25B",
        "30C0194000D9B4800001C25A",
        "30C01901C97DC3000000748E",
        "30C01901C9911E000000710C",
        "30C41901C97A8C80000081EE",
        "30C0194000E40A000001B16C",
        "30C0194000E95A400001B194",
        "30C019002DC1560000006F8F",
        "30C0194000E6F78000016000",
        "30C0194000E6F78000016001",
        "30C0194000E6F78000016002",
        "30C019002DC67000000076F3",
        "30C0194000E405800001B138",
        "30C0194000E2F3C00001B108",
        "30C0194000E2F3C00001B107",
        "30C0194000E95A400001B18A",
        "30C019002DC66480000077CE",
        "30C019002DC58A0000006388",
        "30C01901C9731A000000783F",
        "30C0194000E2DB000001B088",
        "30C01901C90AA400000072EC",
        "30C01901C90AA400000072EB",
        "30C019002DC66480000077C1",
        "30C0194000E2F3C00001B11F",
        "30C01901C96F61400000019F",
        "30C0194000E87C8000014E78",
        "30C0194000D806000001A309",
        "30C0194000ED45400001C29F",
        "30C0194000D1F6400001C2FA",
        "30C0194000E888800001ADF1",
        "30C01901C96F614000000198",
        "30C0194000E2DB000001B084",
        "30C0194000E646C00001797C",
        "30C0194000D1F6400001C2FC",
        "30C0194000E646C00001797D",
        "30C41901C8B1A4800000849D",
        "30C0194000E2DB000001B087",
        "30C0194000EDD64000017B77",
        "30C0194000EDC74000017CED",
        "30C0194000D806000001A30E",
        "30C0194000EDC74000017CEC",
        "30C0194000E95A400001B19B",
        "30C01901C96F614000000194",
        "30C0194000E5CDC00001ADC8",
        "30C0194000E26A4000017D06",
        "30C0194000E5CDC00001ADC9",
        "30C01901C98F9EC0000071B8",
        "30C019002DC66480000077F2",
        "30C019002DC58A000000635C",
        "30C0194000E64F400001A1A6",
        "30C0194000D1F6400001C2CD",
        "30C01901C990C64000000065",
        "30C0190024AA73C0000073AD",
        "30C0194000E40C000001B16F",
        "30C0194000E8844000017BBB",
        "30C019002DC66480000077F3",
        "30C0194000C7618000012549",
        "30C0194000E2788000017DA5",
        "30C0194000EDD64000017B86",
        "30C0194000E28600000174CF",
        "30C0194000D1F6400001C2CB",
        "30C0194000ED840000016337",
        "30C019002DB81B8000007B8E",
        "30C0194000ED84000001633A",
        "30C0194000E740800001A310",
        "30C019002DB81B8000007B8F",
        "30C01901C973098000007B9D",
        "30C01901C993908000009DD6",
        "30C0194000E8ED000001768C",
        "30C0194000D1F6400001C2C0",
        "30C0194000E883000001779A",
        "30C0194000E87C8000014E7A",
        "30C0194000D1F6400001C2C2",
        "30C0190003B8F5C0000073E3",
        "30C0194000ED840000016344",
        "30C01901C993908000009DCB",
        "30C0194000E40C000001B164",
        "30C0194000D9A2400001B1C8",
        "30C0194000E405800001B142",
        "30C0194000D9A2400001B1C6",
        "30C0194000D9A2400001B1CB",
        "30C0194000E6460000017974",
        "30C01901C993A48000006AE4",
        "30C0194000D1F6400001C2D1",
        "30C0194000E40C000001B15B",
        "30C0194000E6460000017975",
        "30C0194000ECF4C000017DFD",
        "30C0194000E88A4000017AE7",
        "30C0194000C7690000017D36",
        "30C019002DC5BF8000009CE1",
        "30C0194000E293800001AFA0",
        "30C0194000E8858000019E66",
        "30C0194000E88A4000017AEE",
        "30C0194000C7690000017D2C",
        "30C0194000E8858000019E64",
        "30C01901C96F634000000196",
        "30C019002DC1504000006F40",
        "30C0194000E651000001AE7B",
        "30C019002DC591C0000062DE",
        "30C0194000E405800001B16D",
        "30C01901C98F5E8000006CFE",
        "30C0194000E2D6800001B0AA",
        "30C01901C993AA0000009DFF",
        "30C01901C99339C000009F5F",
        "30C019002DC591C0000062E6",
        "30C0194000D1F6400001C2BA",
        "30C019002DC41C400000750B",
        "30C0194000E297400001AF95",
        "30C01901C993CE4000006B44",
        "30C0194000E2D6800001B0A5",
        "30C0194000E64D400001A1BE",
        "30C0194000E64D400001A1BD",
        "30C0194000733A0000019CEC",
        "30C01901C973328000003DCB",
        "30C0194000E297400001AF8C",
        "30C0194000C7690000017D1F",
        "30C0194000E649000001731D",
        "30C0194000C761800001A082",
        "30C0194000E260800001763B",
        "30C0194000E2628000017685",
        "30C01901C9730A4000007BA1",
        "30C019002DC6684000007790",
        "30C0194000E55F400001A1D3",
        "30C01901C9952280000001F0",
        "30C41901C97A8880000082AF",
        "30C0194000733A0000019CFC",
        "30C41901C97A8880000082AE",
        "30C0194000E93FC000017657",
        "30C0194000E712000001AE43",
        "30C01901C994F00000003F8D",
        "30C019002DC591C0000062C0",
        "30C01901C8AE670000007290",
        "30C0194000E2F9400001AF0D",
        "30C0194000E883000001AE16",
        "30C01901C99508C000007C9B",
        "30C01901C8AE67000000728F",
        "30C01901C99508C000007C93",
        "30C01901C9911A8000000180",
        "30C019002DC66A80000076CE",
        "30C0194000E2DBC00001B0EC",
        "30C019002DC66A80000076CC",
        "30C0194000E40A000001B144",
        "30C0194000E2DBC00001B0E7",
        "30C0194000E55F400001A1EF",
        "30C01901C99373C000009DC4",
        "30C01901C97318800000720B",
        "30C0194000C969C00001A15E",
        "30C01901C97318800000720A",
        "30C0194000ED110000017C43",
        "30C01901C9908C4000006206",
        "30C0194000ED110000017C48",
        "30C0194000C969C00001A15C",
        "30C01901C9709A0000009D27",
        "30C01901C9909F0000006D51",
        "30C01901C96F6140000001B9",
        "30C0194000EDA3400001C2A4",
        "30C01901C973188000007209",
        "30C0194000D9D50000017B46",
        "30C0194000DA5C800001C151",
        "30C0194000D9D50000017B44",
        "30C01901C9909F0000006D53",
        "30C0194000E2F9400001AF08",
        "30C01901C9909F0000006D52",
        "30C0194000D9D50000017B43",
        "30C0194000EDA3400001C2AA",
        "30C01901C995138000006CE2",
        "30C01901C96F6140000001B0",
        "30C01901C97DCF0000000170",
        "30C01901C995138000006CE6",
        "30C0194000EDA3400001C2A8",
        "30C01901C96F6140000001AB",
        "30C0194000D9D50000017B3A",
        "30C0194000C761800001A27B",
        "30C01901C97DCF000000016C",
        "30C0194000EDBBC00001A12C",
        "30C019002DC58EC000006460",
        "30C019002DC672C0000076B4",
        "30C019002DC58EC000006463",
        "30C019002DC672C0000076B9",
        "30C0194000E8F6000001AE59",
        "30C01901C993470000006E73",
        "30C0194000E290000001AFA9",
        "30C01901C97352C00000784F",
        "30C0194000E290000001AFAC",
        "30C4194000E56780000129AE",
        "30C0194000E95E4000017C7E",
        "30C0194000E284400001AE64",
        "30C019002DC58EC00000644F",
        "30C0194000ED30800001B117",
        "30C01901C992C20000006C3B",
        "30C0194000E2FAC00001AF22",
        "30C0194000EB9E4000019EA5",
        "30C0194000EDC94000017C37",
        "30C0194000B7EE800001790C",
        "30C0194000CA90800001043C",
        "30C019002DC563C0000069EC",
        "30C019002DC563C0000069EB",
        "30C01901C995138000006CE9",
        "30C01901C992C20000006C39",
        "30C0194000E288400001AE70",
        "30C0194000EDCAC000017C2D",
        "30C0194000D9B6800001C1F9",
        "30C0194000C05CC00001AE81",
        "30C0194000ED824000017886",
        "30C0194000ED824000017885",
        "30C0194000EDCAC000017C2A",
        "30C0194000ED824000017888",
        "30C0194000ED824000017889",
        "30C0190100DA130000012932",
        "30C01901C993A98000009E18",
        "30C0194000DC92C000014DE3",
        "30C019002DC58EC00000644E",
        "30C019002DC58EC00000644D",
        "30C0194000E2FB800001AF1A",
        "30C0194000ED110000017C4B",
        "30C0194000E406C00001B130",
        "30C01901C96F6140000001C5",
        "30C0194000E33F800001B0A2",
        "30C01901C96F6140000001C4",
        "30C01901C90F460000007636",
        "30C0194000EDCAC000017C29",
        "30C01940C97A87C00000831A",
        "30C0194000ED30800001B124",
        "30C019002DC58EC000006444",
        "30C01901C96F6140000001C6",
        "30C0194000E40EC00001B100",
        "30C0194000E40F800001B12D",
        "30C0194000A4D7000001B013",
        "30C01901C995060000007C2D",
        "30C0194000E40F800001B12A",
        "30C0194000E293800001AF93",
        "30C4194000E8ED4000012BED",
        "30C01901C994EE8000003F6C",
        "30C0194000DC83800001250E",
        "30C0194000DC83800001250F",
        "30C0194000C233800001043D",
        "30C4194000E8ED4000012BE4",
        "30C4194000E8ED4000012BE9",
        "30C01901C9955B4000006E21",
        "30C0194000E40AC00001B14E",
        "30C01901C97AF68000003DB8",
        "30C0194000D206C0000177A4",
        "30C4194000E8ED4000012BE0",
        "30C0194000E341C000019F13",
        "30C019002DC4164000007548",
        "30C01901C96F1BC00000766C",
        "30C0194000DAD9C00001619D",
        "30C419002DBA974000007FCE",
        "30C01901C97AF68000003DBC",
        "30C0194000E64580000176F9",
        "30C0194000E9294000016105",
        "30C0194000E9294000016103",
